# Tankkipeliprojekti

./: .gitignore  CMakeLists.txt  CMakePresets.json  Git_Branch_Ohje.md  README.md  build_release.bat  version.cpp
include/: Config.hpp  EventManager.hpp  Explosion.hpp  Game.hpp  Projectile.hpp  SoundManager.hpp  Tank.hpp  Terrain.hpp  UI.hpp  menu.hpp
src/: EventManager.cpp  Explosion.cpp  Game.cpp  GameCore.cpp  GameRender.cpp  Projectile.cpp  Tank.cpp  TankControl.cpp  TankGraphics.cpp  TankPhysics.cpp  Terrain.cpp  UI.cpp  main.cpp  menu.cpp
